finish hadeth working on TasbehFragment.kt

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".mainActivity.MainActivity">
 
         </activity>
+        <activity android:name=".Hadeth.HadethDetails2"></activity>
     </application>
 
 </manifest>
